# fragmentlm-gui

./: .clangd  .gitignore  CMakeLists.txt  README.md
include/fragmentlm/common/: result.hpp
include/fragmentlm/model/: main_window.hpp
include/fragmentlm/network/: connection.hpp  protocol.hpp
include/fragmentlm/tokenizer/: tokenizer.hpp
include/fragmentlm/widget/: main_window.hpp
src/: main.cpp
src/internal/widget/: app_main_window.hpp
src/widget/: app_main_window.cpp
ui/: MainWindow.ui
